# aero_forced_alignment

./: book_dict.json  forced_alignment.py  forced_alignment_demo.ipynb  nya_jhn1_2.txt  pyproject.toml  requirements.txt
