[project]
name = "aero-forced-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.26.0",
    "datasets>=2.12.0",
    "dotenv>=0.9.9",
    "fsspec>=2023.0.0",
    "inflect>=6.0.0",
    "ipykernel>=6.0.0",
    "ipython>=8.36.0",
    "jupyter>=1.0.0",
    "librosa>=0.10.0",
    "matplotlib>=3.5.0",
    "modal>=0.55.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "phonemizer>=3.0.0",
    "pydub>=0.25.1",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "seaborn>=0.11.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "uroman>=1.0.0",
]
